# cbicall

./: .dockerignore  .gitattributes  .gitignore  404.html  CHANGELOG.md  CITATION.cff  Changes  Makefile.PL  README.md  RELEASING.md  TODO.md  cpanfile  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build-and-test.yml  build.yml  docker-build-multi-arch.yml  documentation.yml  publish-pypi.yml  publish-testpypi.yml
about/about/: index.html
about/citation/: index.html
about/disclaimer/: index.html
apptainer/: README.md
browser/: README  mtb2html.py  mtb2json.py
browser/templates/: mtdna_report.html
cbicall/: cli.py  config.py  helpmod.py
docker/: Dockerfile  README.md
docs/: index.md
docs-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: overview.md
docs-site/docs/about/: about.md  citation.md  disclaimer.md
docs-site/docs/backends/: native.md  nf-core.md
docs-site/docs/help/: configuration-reference.md  faq.md  naming-conventions.md  outputs.md  performance.md  run-comparison.md  troubleshooting.md
docs-site/docs/installation/: apptainer.mdx  docker.mdx  google-cloud-docker.mdx  non-containerized.mdx
docs-site/docs/pipelines/: mtdna.md  overview.md  wes-wgs-cohort.md  wes-wgs-single.md
docs-site/docs/technical-details/: adding-a-pipeline.md  adding-resources.md  architecture.md  extending-cbicall.md  resource-bundle-v1.md  resource-reproducibility-notes.md
docs-site/docs/usage/: choose-your-path.md  end-to-end-example-mit.md  end-to-end-example-wes.md  integration-tests.md  quickstart.md  resource-validation.md  run-comparison.md  usage.md
docs-site/docs/validation/: cross-environment.md  giab.md  integration-tests.md  overview.md  run-comparison.md
docs-site/src/components/: WorkflowCompatibilityMatrix.mdx
docs-site/src/css/: custom.css
docs-site/src/pages/: index.module.css  index.tsx
docs/about/: about.md  citation.md  disclaimer.md
docs/help/: faq.md  naming-conventions.md  performance.md  troubleshooting.md
docs/installation/: apptainer.md
docs/pipelines/: mtdna.md  wes-wgs-cohort.md  wes_wgs_cohort.md  wes_wgs_single.md  ç
docs/tbl/: supported-pipelines.md
docs/technical-details/: adding-a-pipeline.md  architecture.md  extend-pipelines.md
docs/usage/: choose-your-path.md  end-to-end-example-mit-single.md  end-to-end-example-mit.md  end-to-end-example-wes-single.md  end-to-end-example-wes.md  end-to-end-example.md  quickstart.md  usage.md
download-and-installation/docker-based/: index.html
download-and-installation/non-containerized/: index.html
examples/: README.md
examples/input/: demo.yaml  hg38.yaml  mit.yaml  mit_cohort.yaml  mit_single.yaml  nf-core-demo.yaml  nf-core-sarek.yaml  param.yaml  run_test.sh  run_tests.sh  sample_map.tsv  sarek.yaml  sarek_samplesheet.csv  wes_cohort.yaml  wes_cromwell.yaml  wes_singe.yaml  wes_single.yaml
examples/scripts/: cnag_hpc_cbicall_env.sh  run_cbicall_apptainer_slurm.sh  run_cbicall_slurm.sh  run_mit_cohort.sh  run_mit_single.sh  run_wes_cohort.sh  run_wes_single.sh  run_wgs_single.sh
help/faq/: index.html
help/naming-conventions/: index.html
help/performance/: index.html
help/troubleshooting/: index.html
installation/apptainer/: index.html
installation/docker/: index.html
installation/non-containerized/: index.html
js/: theme_overrides.js
lib/CBICALL/: Config.pm  DNAseq.pm  Help.pm
mtdna/: MToolBox_config.sh
non-containerized/: README.md
pipelines/mtdna/: index.html
pipelines/wes-wgs-cohort/: index.html
pipelines/wes-wgs-single/: index.html
pipelines/wes_wgs_cohort/: index.html
pipelines/wes_wgs_single/: index.html
resources/: cbicall-resource-catalog.json  cbicall-resource-catalog.schema.json
scripts/: 01_download_external_data.py  download_cbicall_bundle.py
search/: search_index.json
src/cbicall/: __about__.py  __init__.py  __main__.py  audit_similarity.py  cli.py  cli_output.py  comparison_commands.py  config.py  console.py  cromwell.py  demo.py  dnaseq.py  doctor.py  errors.py  execution.py  goodbye.py  helpmod.py  html_reports.py  integration_tests.py  models.py  mtdna_browser.py  multiqc.py  paths.py  report_commands.py  report_utils.py  resource_install.py  resources.py  run_audit.py  runtime_info.py  workflow_registry.py
src/cbicall/mtdna_browser_assets/: report.html
t/: 02-dnaseq.t
tbl/supported-pipelines/: index.html
technical-details/adding-a-pipeline/: index.html
technical-details/architecture/: index.html
technical-details/extend-pipelines/: index.html
tests/: 01-config.t  conftest.py  helpers.py  test_audit_similarity.py  test_bin.py  test_cli.py  test_cli_extra.py  test_cli_main.py  test_cli_output.py  test_config.py  test_config_extra.py  test_demo.py  test_dnaseq.py  test_dnaseq_more.py  test_dnaseq_run_cmd.py  test_dnaseq_submit_cmd.py  test_doctor.py  test_download_cbicall_bundle.py  test_download_external_data.py  test_execution.py  test_execution_more.py  test_goodbye.py  test_helpmod.py  test_integration_tests.py  test_mtdna_browser.py  test_multiqc.py  test_packaging.py  test_report_utils.py  test_resources.py  test_vcf2sex.py  test_workflow_files.py  test_workflow_registry.py
tests/fixtures/integration/: native-mit-bash.yaml  native-wes-bash-gatk35.yaml  native-wes-bash.yaml  native-wes-cohort-bash-sharded.yaml  native-wes-cohort-bash.yaml  native-wes-cromwell.yaml  native-wes-nextflow.yaml  native-wes-snakemake.yaml  nf-core-demo.yaml  nf-core-sarek.yaml  (+1 more)
usage/choose-your-path/: index.html
usage/end-to-end-example/: index.html
usage/end-to-end-example-mit/: index.html
usage/end-to-end-example-mit-single/: index.html
usage/end-to-end-example-wes/: index.html
usage/end-to-end-example-wes-single/: index.html
usage/quickstart/: index.html
usage/usage/: index.html
workflows/_nextflow/: _wes_single.nf
workflows/config/: cbicall.workflows.yaml
workflows/registry/: cbicall-workflow-registry.yaml  workflows.yaml
workflows/schema/: cbicall-workflow-registry.schema.json  workflows.schema.json
(+163 files in other folders)
